kubernetes/apps/overlays/prod/medtracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medtracker-ingress
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medtracker
                port:
                  number: 80
  tls:
    - hosts:
        - medtracker
